<?xml version="1.0"?>
<package format="3">
  <name>stepper_joy</name>
  <version>0.0.1</version>
  <description>ROS2 package for joy stepper motor control. Used for robotic jellyfish arm.</description>
  <maintainer email="munzarea@gmail.com">Munir Zarea</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>joy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
